--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "garden-store",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://buhaiov-a.github.io/garden-store/",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -26,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
